# dotenv_schema

./: .env.example  .gitignore  LICENSE  README.md  bump_version.py  publish.sh  pyproject.toml
.github/workflows/: publish-to-pypi.yml  python-package.yml  python-tests.yml
dotenv_schema/: __init__.py
env_loader/: loader.py
tests/: test_loader.py
